...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/weekSch"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="24dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_btn"

        android:fontFamily="@font/andada"
        android:text="Weekly Workout Schedule"
        android:textSize="20sp" />

        <Button
            android:id="@+id/createNote"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/weekSch"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/round_btn"
            android:fontFamily="@font/andada"
            android:text="Create my own workout schedule"
            android:textSize="20sp"
             />


        <Button
            android:id="@+id/exerciseLibraryBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/createNote"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
...
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/exerciseLibraryBtn"
            android:onClick="logout"
            android:text="Logout"
             />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_navigation"
            android:background="@color/colorPrimary"
            app:itemBackground="@color/colorPrimary"

            app:itemTextColor="@drawable/selector"
            app:itemIconTint="@drawable/selector"
            app:menu="@menu/menu_navigation"
...
