<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/exerciseLibraryBtn"
        android:title="Exercise"
        android:icon="@drawable/ic_fitness"/>

    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/inspired"
        android:title="Get inspired"
        android:icon="@drawable/ic_inspire"/>

</menu>