<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/layoutMiscellaneous"
    android:background="@drawable/background_miscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">


    <TextView
        android:id="@+id/textMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/miscellaneous"

        android:textColor="#FFFFFF"
        android:textSize="@dimen/_13ssp" />

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">



        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_one"
                />

            <ImageView
                android:id="@+id/imageColor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_icon_check"
                app:tint="#FFFFFF" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_two"
                />

            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"

                app:tint="#FFFFFF" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_three"
                />

            <ImageView
                android:id="@+id/imageColor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"

                app:tint="#FFFFFF" />

        </FrameLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andada"
            android:includeFontPadding="false"
            android:text="@string/pick_color"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_13ssp"/>



    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutNoteDelete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="#D70303">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/andada"
            android:includeFontPadding="false"
            android:text="@string/delete_note"
            android:textAllCaps="true"
            android:textColor="#D70303"
            android:textSize="@dimen/_13ssp"/>


    </LinearLayout>


<!--

    <LinearLayout
        android:id="@+id/layoutNoteDelete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">



        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="#D70303">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/andada"
            android:includeFontPadding="false"
            android:text="@string/delete_note"
            android:textAllCaps="true"
            android:textColor="#D70303"
            android:textSize="@dimen/_13ssp"/>

-->

</LinearLayout>